--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,72 @@
 plugins {
     id 'java'
+    id 'idea'
+    id 'application'
+    id 'maven-publish'
 }
 
-group 'ch.nilsh'
-version '1.0-SNAPSHOT'
+archivesBaseName = project.name
+group = 'ch.nilsh'
+
+//apply from: 'https://raw.githubusercontent.com/nilshindermann/Common/main/common.gradle'
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+
+    withSourcesJar()
+    withJavadocJar()
+}
+
+
+application {
+    mainClass = 'ch.nilsh.Main'
+}
+
+jar {
+    manifest {
+        attributes([
+                'Main-Class'              : application.mainClass,
+                "Specification-Title"     : project.name,
+                "Specification-Vendor"    : "Nils Hindermann",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : jar.archiveVersion,
+                "Implementation-Vendor"   : "Nils Hindermann",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                'Java-Version'            : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
+        ])
+    }
+}
 
 repositories {
-    mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
-test {
-    useJUnitPlatform()
+publishing {
+    publications {
+        register('mavenJava', MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "file://${project.projectDir}/repo"
+        }
+    }
 }
+
+tasks.register('printVersion') {
+    doLast {
+        println "version=${project.version}"
+    }
+}
+
+// changelog experiment
+//String s = changelog('changelog.txt')
+//System.out.println(s)
+//System.out.println(secret('nexus_uname'))
