--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
-rootProject.name = 'GroovyTest'
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+    }
+}
 
+rootProject.name = 'GroovyTest'
