--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'maven-publish'
 }
 
+version = "$mc_version-$mod_version"
 archivesBaseName = project.name
 group = 'ch.nilsh'
 
@@ -36,6 +37,7 @@ jar {
                 "Implementation-Vendor"   : "Nils Hindermann",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 'Java-Version'            : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
+                'Built-On-Minecraft'      : mc_version
         ])
     }
 }
