--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ group = 'ch.nilsh'
 
 //apply from: 'https://raw.githubusercontent.com/nilshindermann/Common/main/common.gradle'
 
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
+
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(17))
