Revert "Update Specification-Vendor"
This reverts commit 6c6a825082e2432104ccb1703e7f68d5df08f925.

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ jar {
         attributes([
                 'Main-Class'              : application.mainClass,
                 "Specification-Title"     : project.name,
-                "Specification-Vendor"    : "nilsh.ch",
+                "Specification-Vendor"    : "Nils Hindermann",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : jar.archiveVersion,
